Demonstration of Chrome bug involving service workers - added button to deregister service workers to show previously broken pages will work without service workers - listing service worker registrations

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Logs
+:# Logs
 logs
 *.log
 npm-debug.log*
@@ -102,3 +102,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Package Lock
+package-lock.json
